--- a/layout/_partial/head.ejs
+++ b/layout/_partial/head.ejs
@@ -2,7 +2,7 @@
     <!--
         © Material Theme 
         https://github.com/viosey/hexo-theme-material
-        Version: 1.2.5
+        Version: 1.2.5 Sky-Food
     -->
     
     <!-- Title -->
