Edit index.ejs to avoid duplicate post

--- a/layout/index.ejs
+++ b/layout/index.ejs
@@ -7,6 +7,7 @@
 	<% } %>
     <div class="locate-thumbnail-symbol"></div>
     
+    <% if(theme.pin_post == true) { %>
     <% if(hasposttop(page.posts)==true) { %>
     <% getposttop(page.posts).each(function(toppost){ %> 
     	<% if(theme.scheme == "Paradox"){ %>
@@ -19,16 +20,30 @@
 		<% } %>
     <% }); %>
     <% } %>
+    <% } %>
 
     <% page.posts.each(function(post) { %>
-		<% if(theme.scheme == "Paradox"){ %>
-			<!-- Paradox Thumbnail -->
-        	<%- partial('_partial/Paradox-post_entry', { post: post, index: true }) %>
-		<% } %>
-		<% if(theme.scheme == "Isolation"){ %>
-			<!-- Isolation Thumbnail -->
-        	<%- partial('_partial/Isolation-post_entry', { post: post, index: true }) %>
-		<% } %>
+        <% if(theme.pin_post == true) { %>
+            <% if(post.top != true) { %>
+		        <% if(theme.scheme == "Paradox"){ %>
+			        <!-- Paradox Thumbnail -->
+        	        <%- partial('_partial/Paradox-post_entry', { post: post, index: true }) %>
+		        <% } %>
+		        <% if(theme.scheme == "Isolation"){ %>
+			        <!-- Isolation Thumbnail -->
+        	        <%- partial('_partial/Isolation-post_entry', { post: post, index: true }) %>
+	        	<% } %>
+            <% } %>
+        <% } else { %>
+            <% if(theme.scheme == "Paradox"){ %>
+                    <!-- Paradox Thumbnail -->
+                    <%- partial('_partial/Paradox-post_entry', { post: post, index: true }) %>
+                <% } %>
+                <% if(theme.scheme == "Isolation"){ %>
+                    <!-- Isolation Thumbnail -->
+                    <%- partial('_partial/Isolation-post_entry', { post: post, index: true }) %>
+            <% } %>
+        <% } $>
     <% });
     
     if (page.total > 1) { %>
