修改打赏图片描述

--- a/layout/_partial/post-content.ejs
+++ b/layout/_partial/post-content.ejs
@@ -50,13 +50,13 @@
 			<div id="donate_guide" class="donate_bar center hidden">
 
 				<a href="<%= theme.donate.wechat %>" title="用微信扫一扫哦~" class="fancybox" rel="article0">
-					<img src="<%= theme.donate.wechat %>" title="微信打赏 Colin" height="190px" width="auto"/>
+					<img src="<%= theme.donate.wechat %>" title="微信打赏 snatic" height="190px" width="auto"/>
 				</a>
 				
 				
 
 				<a href="<%= theme.donate.alipay %>" title="用支付宝扫一扫即可~" class="fancybox" rel="article0">
-					<img src="<%= theme.donate.alipay %>" title="支付宝打赏 Colin" height="190px" width="auto"/>
+					<img src="<%= theme.donate.alipay %>" title="支付宝打赏 snatic" height="190px" width="auto"/>
 				</a>
 
 				<span class="donate_txt">
